@@ -1,7 +1,7 @@
 <Root>
    <popups>
       <popup name="button3">
-         <menuitem name="Item 1" verb="Forecast" _label="_Forecast" accel="*Control*f"/>
+         <menuitem name="Item 1" verb="Details" _label="_Details" accel="*Control*d"/>
          <menuitem name="Item 2" verb="Update" _label="_Update"
                    pixtype="stock" pixname="gtk-refresh" accel="*Control*u"/>
       <separator/>
