@@ -1,3 +1,12 @@
+2004-08-15  Davyd Madeley  <davyd@madeley.id.au>
+
+	* GNOME_GWeatherApplet.xml:
+	* gweather-applet.c:
+	* gweather-dialog.c: Change "Forecast" to "Details". Fixes #133871.
+
+	* gweather-dialog.c: Change "Humidity" to "Relative Humidity". Fixes
+	#147878.
+
 2004-08-14  Davyd Madeley  <davyd@madeley.id.au>
 
 	* Locations.xmlin: Add Ulaanbaatar, remove extra occurance of Penang,
